# blue_simulator

./: .gitmodules  README.md
blue_gazebo/: CMakeLists.txt  package.xml
blue_gazebo/config/: gazebo_controllers.xml  mimic_joint_pid.yaml
blue_gazebo/launch/: _single_arm_gazebo.launch  blue_pickup_world.launch  blue_world.launch  full.launch  full_pickup.launch  gazebo.launch  gazebo_pickup.launch
blue_gazebo/launch/include/: _pickup_world_objects.launch  run.launch.xml  single_arm_gazebo.launch.xml
blue_gazebo/objects/: simple_box.urdf  simple_cylinder.urdf  table.urdf.xacro
blue_gazebo/worlds/: empty_world.world  pickup.world
blue_simulator/: CMakeLists.txt  package.xml
