<?xml version="1.0"?>
<package format="2">
  <name>blue_gazebo</name>
  <version>0.0.0</version>
  <description>The blue_gazebo package</description>

  <maintainer email="phil80301@berkeley.edu">Philipp Wu</maintainer>

  <license>MIT</license>

  <author email="phil80301@berkeley.edu">Philipp Wu</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros_control</depend>
  <exec_depend>blue_core</exec_depend>
</package>
