<?xml version="1.0"?>
<package format="2">
  <name>blue_simulator</name>
  <version>0.0.0</version>
  <description>The blue simulator metapackage contains tools for simulating the Blue robot</description>

  <maintainer email="phil80301@berkeley.edu"></maintainer>

  <license>MIT</license>

  <author email="phil80301@berkeley.edu">Philipp Wu</author>
  <author email="brentyi@berkeley.edu">Brent Yi</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
